--- a/projeto003/estilo.css
+++ b/projeto003/estilo.css
@@ -1,7 +1,7 @@
 body {
     background-color: #745cc1;
     text-align: center;
-    -webkit-font-smoothing: antialiased;
+    ::-webkit-font-smoothing: antialiased;
 }
 
 img {
