--- a/projeto004/estilo.css
+++ b/projeto004/estilo.css
@@ -39,5 +39,5 @@ a {
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    -webkit-font-smoothing: antialiased;
+    ::-webkit-font-smoothing: antialiased;
 }
