--- a/projeto006/estilo.css
+++ b/projeto006/estilo.css
@@ -28,7 +28,7 @@ h1 span {
     font-size: 20px;
     font-weight: 500;
     text-transform: uppercase;
-     -webkit-font-smoothing: antialiased;
+    ::-webkit-font-smoothing: antialiased;
     
 }
 
